...
            android:layout_below="@id/selectedItems"
            android:text="@string/selectAll"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <CheckBox
            android:id="@+id/selectAll_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-1dp"
            android:layout_marginBottom="-4dp"
            android:layout_toEndOf="@id/selectAll"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/closebtn"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/close_selection_mode"
            android:src="@drawable/tag_cancel_fragment"
            android:backgroundTint="@color/green"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/deletebtn"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_toStartOf="@id/closebtn"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/selectableItemBackground"
            android:backgroundTint="@color/grey"
...
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignEnd="@+id/order_spinner"
            />

        <Spinner
            android:id="@+id/filter_spinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignTop="@id/sort_spinner"
            android:layout_alignStart="@+id/order_spinner_end"
            android:entries="@array/filter_spinner_options"
            android:layout_weight="1"
...
    </LinearLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/item_list"
        android:choiceMode="multipleChoice"
        android:layout_below="@+id/spinner_layout"
        >
    </ListView>

    <LinearLayout
...
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry">
        </TextView>
    </LinearLayout>

    <ImageButton
        android:id="@+id/add_item_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="-6dp"
...
