...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/beige" />

    <EditText
        android:id="@+id/item_name_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/description"
        android:background="@color/darkBrown"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/top_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/date_button"
        android:layout_marginTop="50dp"
        app:cornerRadius="0dp"
        android:backgroundTint="@color/darkBrown"
        android:layout_marginHorizontal="16dp"/>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/barcode_scan_btn"
        android:src="@drawable/camera_svgrepo_com"
        app:layout_constraintTop_toBottomOf="@+id/top_border"
        app:layout_constraintLeft_toRightOf="@id/confirm_button"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/darkBrown"
        android:contentDescription="ScanSerialNumber"
        android:visibility="visible"/>

...
        android:layout_marginTop="15dp"
        app:cornerRadius="0dp"
        android:backgroundTint="@color/darkBrown"
        android:layout_marginHorizontal="16dp"/>

    <EditText
        android:id="@+id/make_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/make"
        android:background="@color/darkBrown"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/date_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/model_button"
        android:layout_marginTop="15dp"
        app:cornerRadius="0dp"
        android:backgroundTint="@color/darkBrown"
        android:layout_marginHorizontal="16dp"/>

    <EditText
...
        android:backgroundTint="@color/darkBrown"
        android:gravity="center"
        android:hint="@string/serialNumber"
        android:inputType="number"
        android:textColorHint="@color/white"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@id/estimated_val_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/model_button"
        android:layout_marginHorizontal="16dp"/>
    <ImageButton
        android:layout_width="50dp"
...
