<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="game_view_content_description">Game view</string>
    <string name="app_name">Dwelventory</string>


    <string name="tag_hint">New Tag Name</string>
    <string name="tag_confirm">Apply</string>
    <string name="tag_remove_toast">Tag Deleted</string>
    <string name="tag_create_toast">Tag Created</string>
    <string name="invalid_tag_toast">Invalid Tag</string>
    <string name="tag_already_exists_toast">Tag Already Exists</string>
    <string name="no_tags_selected">Please Select a Tag</string>


    <string name="delete_tag_message">Delete Tag: </string>
    <string name="delete_tag_delete_button">Delete</string>
    <string name="delete_tag_reject_button">Back</string>

    <string name="confirm">Confirm</string>
    <string name="Date">Date</string>
    <string name="description">Description (Name)</string>
    <string name="date">Date (mm-dd-yyyy)</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="serialNumber">Serial Number</string>
    <string name="estValue">Est Value</string>
    <string name="comment">Comment</string>
    <string name="photos">Photos</string>
    <string name="imageDescription">Item Image</string>
    <string name="selectMake">Select Make</string>
    <string name="selectTags">FILTER BY TAGS</string>
    <string name="selectDRange">Select Date Range</string>
    <string name="selectkWords">Select Keywords</string>
    <string name="done">Apply</string>
    <string name="totalcost">Total Cost: $%d</string>

    <string-array name="sort_array">
        <item>Date</item>
        <item>Description</item>
        <item>Make</item>
        <item>Estimated Value</item>
        <item>Tags</item>
    </string-array>

    <string-array name="order_array">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="tags_title">TAGS</string>


    <string name="delete">Delete</string>
    <string name="selectItems">Selected Items : 0</string>
    <string name="selectAll">Select all</string>
    <string name="deleteSelectedItems">Delete selected items</string>
    <string name="separate">(separate input with spaces)</string>
    <string name="close_selection_mode">Close Selection Mode</string>
    <string name="total_cost">Total Cost</string>
    <string name="add_item">Add Item</string>
    <string name="snap">Snap</string>
    <string name="scan">Scan</string>

</resources>

