<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/beige"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectDRange"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:paddingVertical="10dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:background="#8e7a6b"></TextView>

    <ImageView
        android:id="@+id/calender_icon"
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:layout_height="92dp"
        android:src="@drawable/calender_filter_icon"></ImageView>

    <TextView
        android:id="@+id/filter_date_cal1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:hint="Start Date: mm-dd-yyyy"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textSize="25dp"></TextView>

    <TextView
        android:id="@+id/filter_date_cal2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:hint="End Date: mm-dd-yyyy"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textSize="25dp"></TextView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Invalid date format"
        android:textAlignment="center"
        android:textColor="#FF0000" />

    <android.widget.Button
        android:id="@+id/filter_date_donebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/tag_filter_apply"></android.widget.Button>



</LinearLayout>